<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">我的天气</string>
    <string name="detail_name">详细信息</string>
    <string name="drawer_name">详细信息</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="show_detail_date">天气更新时间：</string>

<!--layout_splash-->
    <string name="splash_title">我的天气</string>
    <string name="splash_subtitle">拥有好天气  拥抱好心情</string>
    <string name="splash_bottom_text">By Wuyang----Version 1.0</string>
    <string name="splash_loading" tools:ignore="TypographyEllipsis">数据加载中...</string>

    <!-- layout_drawer_item-->
    <string name="item_icon">Icon</string>
    <string name="item_weather">未来七天</string>
    <string name="item_address">详细地址</string>
    <string name="item_query">天气查询</string>
    <string name="item_air_quality">空气质量查询</string>
    <string name="item_setting">设置</string>

    <!-- layout_drawer-->
    <string name="drawer_icon">Icon</string>
    <string name="drawer_textView">舞</string>

    <!-- menu_main-->
    <string name="menu_refresh">刷新</string>
    <string name="menu_about">关于</string>
    <string name="menu_exit">退出</string>
    <string name="menu_share">分享</string>


    <!-- layout_detail-->
    <string name="detail_weather_day">白天天气状况</string>
    <string name="detail_weather_night">夜晚天气状况</string>
    <string name="detail_temp_day">白天气温</string>
    <string name="detail_temp_night">晚上气温</string>
    <string name="detail_wind_power_day">白天风力</string>
    <string name="detail_wind_power_night">晚上风力</string>
    <string name="detail_wind_direction_day">白天风向</string>
    <string name="detail_wind_direction_night">晚上风向</string>
    <string name="detail_weather_index1">晨练指数</string>
    <string name="detail_weather_index2">舒适度指数</string>
    <string name="detail_weather_index3">穿衣指数</string>
    <string name="detail_sun_raise">日出日落</string>
    <string name="detail_publish_time">发布时间</string>

    <string name="detail_air_quality">空气质量</string>
    <string name="detail_pollutant">首要污染物</string>
    <string name="detail_pm25">PM2.5含量</string>
    <string name="detail_pm10">PM10含量</string>
    <string name="detail_o3">臭氧含量</string>
    <string name="detail_so2">二氧化硫含量</string>
    <string name="detail_no2">二氧化氮含量</string>
    <string name="detail_co">一氧化碳含量</string>


    <string name="detail_county_name">县/区</string>
    <string name="detail_city_name">城市</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- layout_show_address_fragment-->
    <string name="address_county_name">县/区</string>
    <string name="address_city_name">城市</string>
    <string name="address_province_name">省份</string>
    <string name="address_longitude_name">经度</string>
    <string name="address_latitude_name">纬度</string>
    <string name="address_name">地址</string>
    <string name="address_city_code_name">区号</string>

    <!-- layout_query_air_quality_Fragment-->
    <string name="query_city_name">城市：</string>
    <string name="query_city">市</string>
    <string name="query_button">查询</string>
    <string name="query_hint">请输入要查询的城市名</string>


    <!-- layout_query_weather_dialog_view-->
    <string name="query_quality_dialog_title">请输入城市名</string>
    <string name="query_quality_dialog_hint">城市名</string>
    <string name="query_quality_dialog_city">市</string>
    <string name="query_weather_dialog_title">请输入城市名</string>
    <string name="query_weather_dialog_hint">城市名</string>
    <string name="query_weather_dialog_city">（市,县,区）</string>
    <string name="query_dialog_btn_query">查询</string>
    <string name="query_dialog_btn_cancel">取消</string>


    <string name="setting_switch">允许后台每隔一段时间查询空气质量，并通知</string>
    <string name="setting_text">设置</string>
</resources>
