<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_gravity="center"
              android:background="@color/app_main_color"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">

        <TextView
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/detail_weather_day"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/detail_weather_night"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_temp_day"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_temp_night"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_weather_index1"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_weather_index2"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_weather_index3"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_sun_raise"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_publish_time"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="7dp"
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_air_quality"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_pollutant"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_pm25"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_pm10"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_o3"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_so2"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_no2"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_co"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="7dp"
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_county_name"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="3dp"
            android:gravity="center"
            android:text="@string/detail_city_name"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/detail_weather_day"
            android:gravity="start"
            android:padding="3dp"
            android:text="@string/detail_weather_day"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_weather_night"
            android:gravity="start"
            android:padding="3dp"
            android:text="@string/detail_weather_night"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_temp_day"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_temp_day"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_temp_night"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_temp_night"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_weather_index1"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_weather_index1"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_weather_index2"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_weather_index2"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_weather_index3"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_weather_index3"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_sun_raise"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_sun_raise"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_publish_time"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_publish_time"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_air_quality"
            android:layout_marginTop="7dp"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_air_quality"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_pollutant"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_pollutant"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/detail_pm25"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_pm25"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_pm10"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_pm10"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_o3"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_o3"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_so2"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_so2"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_no2"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_no2"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_co"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_co"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_county_name"
            android:layout_marginTop="7dp"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_county_name"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_city_name"
            android:padding="3dp"
            android:gravity="start"
            android:text="@string/detail_city_name"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>





</LinearLayout>

