<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/app_main_color"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/fragment_detail_img"
        android:paddingTop="20dp"
        android:contentDescription="@string/item_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"/>
    <LinearLayout
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:text="@string/detail_weather_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:text="@string/detail_weather_night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:text="@string/detail_temp_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:text="@string/detail_temp_night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:text="@string/detail_wind_direction_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:text="@string/detail_wind_direction_night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:text="@string/detail_wind_power_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:text="@string/detail_wind_power_night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:gravity="center"
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:text="@string/detail_sun_raise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:id="@+id/fragment_detail_weather_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:id="@+id/fragment_detail_weather_night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:id="@+id/fragment_detail_temp_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:id="@+id/fragment_detail_temp_night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:id="@+id/fragment_detail_wind_direction_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:id="@+id/fragment_detail_wind_direction_night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:id="@+id/fragment_detail_wind_power_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:id="@+id/fragment_detail_wind_power_night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:padding="4dp"
                android:textColor="@color/white_color"
                android:id="@+id/fragment_detail_sun_raise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>