<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:gravity="center"
              android:background="@color/app_main_color"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/address_county_name"
            android:textSize="18sp"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/address_city_name"
            android:textSize="18sp"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/address_province_name"
            android:textSize="18sp"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/address_city_code_name"
            android:textSize="18sp"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/address_longitude_name"
            android:textSize="18sp"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/address_latitude_name"
            android:textSize="18sp"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/address_name"
            android:textSize="18sp"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:id="@+id/address_county_name"
            android:textSize="18sp"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:id="@+id/address_city_name"
            android:textSize="18sp"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:id="@+id/address_province_name"
            android:textSize="18sp"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:id="@+id/address_city_code_name"
            android:textSize="18sp"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:id="@+id/address_longitude_name"
            android:textSize="18sp"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:id="@+id/address_latitude_name"
            android:textSize="18sp"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="15dp"
            android:gravity="start"
            android:id="@+id/address_name"
            android:textSize="15sp"
            android:lineSpacingMultiplier="1.3"
            android:maxEms="3"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="@color/white_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>