<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_gravity="center"
              android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/dialog_weather_input"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="4dp"
            android:textSize="18sp"
            android:text="@string/query_weather_dialog_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/dialog_cancel"
            android:text="@string/query_dialog_btn_cancel"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>
        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/dialog_confirm"
            android:text="@string/query_dialog_btn_query"
            android:layout_width="wrap_content"
            android:padding="5dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>